# Bot

./: README.md
bot2/: Cargo.toml  output.txt
bot2/src/: bancodedados.rs  config.rs  help.rs  lib.rs  main.rs
src/: config.rs  lib.rs  main.rs
